[gd_scene load_steps=2 format=3 uid="uid://d3s486ycrgiju"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_42hrh"]

[node name="Main" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 2
script = ExtResource("1_42hrh")

[node name="PortInput" type="LineEdit" parent="Menu"]
layout_mode = 2
placeholder_text = "Port"
caret_blink = true
caret_blink_interval = 0.5

[node name="MaxPlayersInput" type="LineEdit" parent="Menu"]
layout_mode = 2
placeholder_text = "Max players"
caret_blink = true
caret_blink_interval = 0.5

[node name="AdressInput" type="LineEdit" parent="Menu"]
layout_mode = 2
placeholder_text = "Adress"

[node name="Start" type="Button" parent="Menu"]
layout_mode = 2
text = "Start"

[node name="World" type="Node2D" parent="."]

[connection signal="pressed" from="Menu/Start" to="Menu" method="_on_start_pressed"]
